cititechdNew2024Jan/force-app/main/default/objects/RSA__c/RSA__c.object-meta.xml
<CustomObject>
    <label>RSA</label>
    <nameField>
        <label>RSA  Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RSA Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>