cititechdNew2024Jan/force-app/main/default/objects/RSA__c/fields/Business_Lead_OE__c.field-meta.xml
<CustomField>
    <fullName>Business_Lead_OE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Lead (OE)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RSA_Engagements1</relationshipName>
    <type>Lookup</type>
</CustomField>