cititechdNew2024Jan/force-app/main/default/objects/RSA__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>please enter any other relevant comments &amp; notes.</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>