cititechdNew2024Jan/force-app/main/default/objects/RSA__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>enter the account that is paying for this shoot.</inlineHelpText>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RSA Engagements (Customer Account)</relationshipLabel>
    <relationshipName>RSA_Engagements1</relationshipName>
    <type>Lookup</type>
</CustomField>