cititechdNew2024Jan/force-app/main/default/objects/RSA__c/fields/Deal_Size__c.field-meta.xml
<CustomField>
    <fullName>Deal_Size__c</fullName>
    <inlineHelpText>enter the estimated deal size:</inlineHelpText>
    <label>Deal Size $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>