cititechdNew2024Jan/force-app/main/default/objects/RSA__c/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <label>Deal Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IPO</fullName>
            </value>
            <value>
                <fullName>Muni</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>FO</fullName>
            </value>
            <value>
                <fullName>FL</fullName>
            </value>
            <value>
                <fullName>NDR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>