cititechdNew2024Jan/force-app/main/default/objects/RSA__c/fields/Engagement_Owner__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>enter the OE user assigned to this engagement</inlineHelpText>
    <label>Engagement Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RSA_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>