cititechdNew2024Jan/force-app/main/default/objects/RSA__c/fields/Issuer_Account__c.field-meta.xml
<CustomField>
    <fullName>Issuer_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Issuer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RSA Engagements</relationshipLabel>
    <relationshipName>RSA_Engagements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>