cititechdNew2024Jan/force-app/main/default/objects/RSA__c/fields/Presentation__c.field-meta.xml
<CustomField>
    <fullName>Presentation__c</fullName>
    <label>Presentation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audio</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>PPT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>