cititechdNew2024Jan/force-app/main/default/objects/RSA__c/fields/Underwriter_Account_2__c.field-meta.xml
<CustomField>
    <fullName>Underwriter_Account_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>select secondary underwriter</inlineHelpText>
    <label>Underwriter Account 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RSA Engagements (Underwriter Account 2)</relationshipLabel>
    <relationshipName>RSA_Engagements3</relationshipName>
    <type>Lookup</type>
</CustomField>