cititechdNew2024Jan/force-app/main/default/objects/RSA__c/fields/Underwriter_Account_3__c.field-meta.xml
<CustomField>
    <fullName>Underwriter_Account_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>select another underwriter account if one exists</inlineHelpText>
    <label>Underwriter Account 3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RSA Engagements (Underwriter Account 3)</relationshipLabel>
    <relationshipName>RSA_Engagements4</relationshipName>
    <type>Lookup</type>
</CustomField>