cititechdNew2024Jan/force-app/main/default/objects/RSA__c/fields/Underwriter_Account__c.field-meta.xml
<CustomField>
    <fullName>Underwriter_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>enter the account underwriting the IPO</inlineHelpText>
    <label>Underwriter Account 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RSA Engagements (Underwriter Account 1)</relationshipLabel>
    <relationshipName>RSA_Engagements2</relationshipName>
    <type>Lookup</type>
</CustomField>