cititechdNew2024Jan/force-app/main/default/objects/RSA__c/fields/Underwriter_Note__c.field-meta.xml
<CustomField>
    <fullName>Underwriter_Note__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>enter any notes or long strings regarding underwriters here.</inlineHelpText>
    <label>Underwriter Note:</label>
    <length>50</length>
    <type>Text</type>
</CustomField>