cititechdNew2024Jan/force-app/main/default/objects/RSA__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Time__c</columns>
    <columns>Business_Lead_OE__c</columns>
    <columns>Engagement_Owner__c</columns>
    <columns>Customer_Account__c</columns>
    <columns>Issuer_Account__c</columns>
    <columns>Underwriter_Account__c</columns>
    <columns>Deal_Type__c</columns>
    <columns>Presentation__c</columns>
    <columns>Deal_Size__c</columns>
    <columns>Issue_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>